# MovieKit

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Core/: CMakeLists.txt  core.cpp  core.h
Cosmos/: CMakeLists.txt  cosmos.h
